--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name = "description" content = "Это моя первая страница">
     <title>Страница-визитка</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
