--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,8 @@
     </div></div>
     <div class="about">
         <h2>ОБО МНЕ</h2>
-        <img src="C:\Users\i.kin\Desktop\web-page\src\img\foto.jpg" alt="Упс">
+        <img src="C:\Users\i.kin\Desktop\web-page\src\img\underline.png" alt="Упс">
+        
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <input type="submit" value = "Скачать резюме">
     </div>
