to be continued...

--- a/src/index.html
+++ b/src/index.html
@@ -29,25 +29,25 @@
         <input type="submit" value = "Мои работы">
     </div></div>
     <div class="about">
-        <h2>ОБО МНЕ</h2>
-        <img src="C:\Users\i.kin\Desktop\web-page\src\img\underline.png" alt="Упс">
-        
+        <div class="aboutMe">ОБО МНЕ</div>  
+        <img class="about-line" src="img\underline.png" alt="Упс">      
+        <img class="about-foto" src="img\foto.jpg" alt="Упс">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <input type="submit" value = "Скачать резюме">
     </div>
     <div class="skills">
         <h2>ЧТО Я УМЕЮ</h2>
         <ul>
-        <li><img src="C:\Users\i.kin\Desktop\web-page\src\img\note.jpg" alt="Упс"> <br> Веб-дизайн <br> Lorem ipsum dolor sit amet placerat facilisis felis mi in tempu </li>
-        <li><img src="C:\Users\i.kin\Desktop\web-page\src\img\sign.jpg" alt="Упс"> <br> Разработка <br> Lorem ipsum dolor sit amet placerat facilisis mi in tempus elei </li>
-        <li><img src="C:\Users\i.kin\Desktop\web-page\src\img\racket.jpg" alt="Упс"> <br>CEO-оптимизация <br> Lorem ipsum dolor sit amet placerat facilisis felis mi in tempu </li>
-        <li><img src="C:\Users\i.kin\Desktop\web-page\src\img\gramophon.jpg" alt="Упс"> <br>Маркетинг <br> Lorem ipsum dolor sit amet placerat facilisis felis mi in tempu </li>
+        <li><img src="img\note.jpg" alt="Упс"> <br> Веб-дизайн <br> Lorem ipsum dolor sit amet placerat facilisis felis mi in tempu </li>
+        <li><img src="img\sign.jpg" alt="Упс"> <br> Разработка <br> Lorem ipsum dolor sit amet placerat facilisis mi in tempus elei </li>
+        <li><img src="img\racket.jpg" alt="Упс"> <br>CEO-оптимизация <br> Lorem ipsum dolor sit amet placerat facilisis felis mi in tempu </li>
+        <li><img src="img\gramophon.jpg" alt="Упс"> <br>Маркетинг <br> Lorem ipsum dolor sit amet placerat facilisis felis mi in tempu </li>
         </ul>
     </div>
     <div class="examples">
         <h2>КЕЙСЫ</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <img src="C:\Users\i.kin\Desktop\web-page\src\img\workplace.jpg" alt="Упс">
+        <img src="img\workplace.jpg" alt="Упс">
         <h3>CLIENT:</h3>
         <p>Какая-то компания</p>
         <h3>WEBSITE:</h3>
@@ -81,23 +81,23 @@
     <div class="statistics">
         <h2>НЕМНОГО СТАТИСТИКИ</h2>
         <ul>
-            <li><img src="C:\Users\i.kin\Desktop\web-page\src\img\smile.jpg" alt="Упс"></li>
+            <li><img src="img\smile.jpg" alt="Упс"></li>
             <p><b>120</b></p>
             <p>СЧАСТЛИВЫХ КЛИЕНТОВ</p>
-            <li><img src="C:\Users\i.kin\Desktop\web-page\src\img\scobki.jpg" alt="Упс"></li>
+            <li><img src="img\scobki.jpg" alt="Упс"></li>
             <p><b>4,600</b></p>
             <p>ЧАСОВ РАБОТЫ</p>
-            <li><img src="C:\Users\i.kin\Desktop\web-page\src\img\ok.jpg" alt="Упс"></li>
+            <li><img src="img\ok.jpg" alt="Упс"></li>
             <p><b>340</b></p>
             <p>ПРОЕКТОВ ЗАВЕРШЕНО</p>
-            <li><img src="C:\Users\i.kin\Desktop\web-page\src\img\kubok.png" alt="Упс"></li>
+            <li><img src="img\kubok.png" alt="Упс"></li>
             <p><b>23</b></p>
             <p>НАГРАД ПОЛУЧЕНО</p>
         </ul>
     </div>
     <div class="comments">
         <h2>ОТЗЫВЫ</h2>
-        <img src="C:\Users\i.kin\Desktop\web-page\src\img\fotka.png" alt="Упс">
+        <img src="img\fotka.png" alt="Упс">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <p><b>Михаил,</b> Ген директор "Газпром"</p>
     </div>
@@ -105,9 +105,9 @@
         <h2>МОИ КОНТАКТЫ</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis se</p>
         <ul>
-            <li><img src="C:\Users\i.kin\Desktop\web-page\src\img\geo.png" alt="Упс"><p>Санкт-Петербург <p>Невский проспект 11</p></li>
-            <li><img src="C:\Users\i.kin\Desktop\web-page\src\img\convert.png" alt="Упс"><p>info@companyname.com</p></li>
-            <li><img src="C:\Users\i.kin\Desktop\web-page\src\img\phone.png" alt="Упс"><p>+7 999 999-99-99</p></li>
+            <li><img src="img\geo.png" alt="Упс"><p>Санкт-Петербург <p>Невский проспект 11</p></li>
+            <li><img src="img\convert.png" alt="Упс"><p>info@companyname.com</p></li>
+            <li><img src="img\phone.png" alt="Упс"><p>+7 999 999-99-99</p></li>
         </ul>
         <h3>ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</h3>
         <form action="#">
@@ -116,12 +116,12 @@
            <p><textarea name = "name1" cols = "46" rows = "5" placeholder = "Сообщение"></textarea></p>
            <input type="submit" value = "Отправить"> 
         </form>
-        <img src="C:\Users\i.kin\Desktop\web-page\src\img\fb.png" alt="Упс">
-        <img src="C:\Users\i.kin\Desktop\web-page\src\img\twit.png" alt="Упс">
-        <img src="C:\Users\i.kin\Desktop\web-page\src\img\ball.png" alt="Упс">
-        <img src="C:\Users\i.kin\Desktop\web-page\src\img\cat.png" alt="Упс">
-        <img src="C:\Users\i.kin\Desktop\web-page\src\img\inst.png" alt="Упс">
-        <img src="C:\Users\i.kin\Desktop\web-page\src\img\in.png" alt="Упс">
+        <img src="img\fb.png" alt="Упс">
+        <img src="img\twit.png" alt="Упс">
+        <img src="img\ball.png" alt="Упс">
+        <img src="img\cat.png" alt="Упс">
+        <img src="img\inst.png" alt="Упс">
+        <img src="img\in.png" alt="Упс">
     </div>
 </body>
 </html>
