--- a/src/index.html
+++ b/src/index.html
@@ -29,99 +29,99 @@
         <input type="submit" value = "Мои работы">
     </div></div>
     <div class="about">
-        <div class="aboutMe">ОБО МНЕ</div>  
-        <img class="about-line" src="img\underline.png" alt="Упс">      
+        <div class="header">ОБО МНЕ</div>  
+        <img class="underline" src="img\underline.png" alt="Упс">      
         <img class="about-foto" src="img\foto.jpg" alt="Упс">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <input type="submit" value = "Скачать резюме">
     </div>
     <div class="skills">
-        <h2>ЧТО Я УМЕЮ</h2>
-        <ul>
-        <li><img src="img\note.jpg" alt="Упс"> <br> Веб-дизайн <br> Lorem ipsum dolor sit amet placerat facilisis felis mi in tempu </li>
-        <li><img src="img\sign.jpg" alt="Упс"> <br> Разработка <br> Lorem ipsum dolor sit amet placerat facilisis mi in tempus elei </li>
-        <li><img src="img\racket.jpg" alt="Упс"> <br>CEO-оптимизация <br> Lorem ipsum dolor sit amet placerat facilisis felis mi in tempu </li>
-        <li><img src="img\gramophon.jpg" alt="Упс"> <br>Маркетинг <br> Lorem ipsum dolor sit amet placerat facilisis felis mi in tempu </li>
-        </ul>
+        <div class="header">ЧТО Я УМЕЮ</div>
+        <img class="underline" src="img\underline.png" alt="Упс">
+        <div class="skills-ul"><ul>
+            <li><img src="img\note.jpg" alt="Упс"><h2>Веб-дизайн</h2><p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempu</p></li>
+            <li><img src="img\sign.jpg" alt="Упс"><h2>Разработка</h2><p>Lorem ipsum dolor sit amet placerat facilisis mi in tempus elei</p></li>
+            <li><img src="img\racket.jpg" alt="Упс"><h2>CEO-оптимизация</h2><p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempu</p></li>
+            <li><img src="img\gramophon.jpg" alt="Упс"><h2>Маркетинг</h2><p>Lorem ipsum dolor sit amet placerat facilisis felis mi in temp</p></li>
+        </ul></div>
+        
     </div>
     <div class="examples">
-        <h2>КЕЙСЫ</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <img src="img\workplace.jpg" alt="Упс">
-        <h3>CLIENT:</h3>
-        <p>Какая-то компания</p>
-        <h3>WEBSITE:</h3>
-        <p>http://www.google.com</p>
+        <div class="header">КЕЙСЫ</div>
+        <img class="underline" src="img\underline.png" alt="Упс">
+        <div class="pText"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></div> 
+        <img class="workplace" src="img\workplace.jpg" alt="Упс">
+        <div class="client"><h3> CLIENT:</h3> 
+        <p>Какая-то компания</p></div>
+        <div class="project_title"><h3>Название проекта</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit., sed d</p></div>
+        <div class="web-site"><h3>WEBSITE:</h3> 
+        <p>http://www.google.com</p></div>
         <form action="http://www.google.com" target="_blank">
         <button>VISIT LIVE SITE</button>
         </form>
-        <h3>Название проекта</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit., sed d</p>
+
     </div>
     <div class="price">
         <h2>Расчёт стоимости</h2>
         <h3>ТИП САЙТА</h3>
-        <select name="type_site" id="1">
+        <select class="selector" name="type_site" id="1">
             <option value="Opt1">Визитка</option>
             <option value="Opt1">Онлайн-магазин</option>
         </select>
           <h3>ДИЗАЙН</h3>
-        <select name="type_site" id="1">
+        <select class="selector" name="type_site" id="1">
             <option value="Opt1">Вариант1</option>
             <option value="Opt1">Вариант2</option>
         </select>
           <h3>АДАПТИВНОСТЬ</h3>
-        <select name="type_site" id="1">
+        <select class="selector" name="type_site" id="1">
             <option value="Opt1">Компьютер</option>
             <option value="Opt1">Смартфон</option>
         </select>
+        <img src="img/line.png" alt="УПС">
         <p>Сроки 0</p>
         <p>Стоимость 0</p>
     </div>
     <div class="statistics">
-        <h2>НЕМНОГО СТАТИСТИКИ</h2>
-        <ul>
-            <li><img src="img\smile.jpg" alt="Упс"></li>
-            <p><b>120</b></p>
-            <p>СЧАСТЛИВЫХ КЛИЕНТОВ</p>
-            <li><img src="img\scobki.jpg" alt="Упс"></li>
-            <p><b>4,600</b></p>
-            <p>ЧАСОВ РАБОТЫ</p>
-            <li><img src="img\ok.jpg" alt="Упс"></li>
-            <p><b>340</b></p>
-            <p>ПРОЕКТОВ ЗАВЕРШЕНО</p>
-            <li><img src="img\kubok.png" alt="Упс"></li>
-            <p><b>23</b></p>
-            <p>НАГРАД ПОЛУЧЕНО</p>
-        </ul>
+        <div class="header">НЕМНОГО СТАТИСТИКИ</div>
+        <img class="underline" src="img\underline.png" alt="Упс">
+        <div class="stat-ul"><ul>
+            <li><img src="img\smile.png" alt="Упс"><h2>120</h2><p>СЧАСТЛИВЫХ КЛИЕНТОВ</p></li>
+            <li><img src="img\scobki.png" alt="Упс"><h2>4,600</h2><p>ЧАСОВ РАБОТЫ</p></li>
+            <li><img src="img\ok.png" alt="Упс"><h2>340</h2><p>ПРОЕКТОВ ЗАВЕРШЕНО</p></li>
+            <li><img src="img\kubok.png" alt="Упс"><h2>23</h2><p>НАГРАД ПОЛУЧЕНО</p></li>
+        </ul></div> 
     </div>
     <div class="comments">
-        <h2>ОТЗЫВЫ</h2>
-        <img src="img\fotka.png" alt="Упс">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <p><b>Михаил,</b> Ген директор "Газпром"</p>
+       <div class="header">ОТЗЫВЫ</div>
+       <img class="underline" src="img\underline.png" alt="Упс">
+        <img class="fotka" src="img\fotka.png" alt="Упс">
+        <div class="comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit
+        <p><b>Михаил</b>, Ген. директор ПАО "Газпром".</p></div>
+        <div class="tochki"><ul> 
+        <li><img src="img/orange.png" alt="упс"></li>
+        <li><img src="img/orange1.png" alt="упс"></li>
+        <li><img src="img/orange1.png" alt="упс"></li>
+        </ul>
+        </div>
     </div>
     <div class="contacts">
-        <h2>МОИ КОНТАКТЫ</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis se</p>
-        <ul>
-            <li><img src="img\geo.png" alt="Упс"><p>Санкт-Петербург <p>Невский проспект 11</p></li>
+        <div class="header-contacts">МОИ КОНТАКТЫ</div>
+        <img class="underline" src="img\underline.png" alt="Упс">
+        <div class="some-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit duis se</div>
+        <div class="contacts-ul"><ul>
+            <li><img src="img\geo.png" alt="Упс"><p>Санкт-Петербург<br>Невский проспект 11</p></li>
             <li><img src="img\convert.png" alt="Упс"><p>info@companyname.com</p></li>
-            <li><img src="img\phone.png" alt="Упс"><p>+7 999 999-99-99</p></li>
-        </ul>
-        <h3>ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</h3>
+            <li><img src="img\phone.png" alt="Упс"><p>+7 999 999-99-99</p></li></ul></div>
+        
+        <div class="send-message">ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</div>
         <form action="#">
             <input type="text" name = "text_name" placeholder = "Введите имя">
             <input type="text" name = "text_name" placeholder = "E-mail">
            <p><textarea name = "name1" cols = "46" rows = "5" placeholder = "Сообщение"></textarea></p>
            <input type="submit" value = "Отправить"> 
         </form>
-        <img src="img\fb.png" alt="Упс">
-        <img src="img\twit.png" alt="Упс">
-        <img src="img\ball.png" alt="Упс">
-        <img src="img\cat.png" alt="Упс">
-        <img src="img\inst.png" alt="Упс">
-        <img src="img\in.png" alt="Упс">
     </div>
 </body>
 </html>
