--- a/src/index.html
+++ b/src/index.html
@@ -116,12 +116,12 @@
             <li><img src="img\phone.png" alt="Упс"><p>+7 999 999-99-99</p></li></ul></div>
         
         <div class="send-message">ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</div>
-        <form action="#">
-            <input type="text" name = "text_name" placeholder = "Введите имя">
+        <div class="form-msg"><form action="#">
+            <input type="text" name = "text_name" placeholder = "Имя">
             <input type="text" name = "text_name" placeholder = "E-mail">
            <p><textarea name = "name1" cols = "46" rows = "5" placeholder = "Сообщение"></textarea></p>
-           <input type="submit" value = "Отправить"> 
-        </form>
+           <input class="button" type="submit" value = "Отправить"> 
+        </form></div>
     </div>
 </body>
 </html>
