--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
         <nav>
             <div class = "logo">Илья Кин</div>
             <div class="menu"><ul>
-                <li>Обо мне</li>
-                <li>Услуги</li>
-                <li>Кейс</li>
-                <li>Прайс</li>
-                <li>Отзывы</li>
-                <li>Контакты</li>
+                <li><a href="#aboutme">Обо мне</a></li>
+                <li><a href="#services">Услуги</a></li>
+                <li><a href="#examples">Кейс</a></li>
+                <li><a href="#price">Прайс</a></li>
+                <li><a href="#feedback">Отзывы</a></li>
+                <li><a href="#contacts">Контакты</a></li>
             </ul></div>
         </nav>
     </header>
@@ -25,17 +25,17 @@
     <div class="main"><div class="title_container">
         <h1>Привет<br>Я Илья Кин</h1>
         <h4>Фулл стек веб-разработчик</h4>
-        <input type="submit" value = "Обо мне">
-        <input type="submit" value = "Мои работы">
+        <input type="button" value = "Обо мне">
+        <input type="button" value = "Мои работы">
     </div></div>
-    <div class="about">
+    <div class="about"><a name="aboutme"></a>
         <div class="header">ОБО МНЕ</div>  
         <img class="underline" src="img\underline.png" alt="Упс">      
         <img class="about-foto" src="img\foto.jpg" alt="Упс">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <input type="submit" value = "Скачать резюме">
+        <input type="button" value = "Скачать резюме">
     </div>
-    <div class="skills">
+    <div class="skills"><a name="services"></a>
         <div class="header">ЧТО Я УМЕЮ</div>
         <img class="underline" src="img\underline.png" alt="Упс">
         <div class="skills-ul"><ul>
@@ -46,7 +46,7 @@
         </ul></div>
         
     </div>
-    <div class="examples">
+    <div class="examples"><a name="examples"></a>
         <div class="header">КЕЙСЫ</div>
         <img class="underline" src="img\underline.png" alt="Упс">
         <div class="pText"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></div> 
@@ -62,7 +62,7 @@
         </form>
 
     </div>
-    <div class="price">
+    <div class="price"><a name="price"></a>
         <h2>Расчёт стоимости</h2>
         <h3>ТИП САЙТА</h3>
         <select class="selector" name="type_site" id="1">
@@ -93,7 +93,7 @@
             <li><img src="img\kubok.png" alt="Упс"><h2>23</h2><p>НАГРАД ПОЛУЧЕНО</p></li>
         </ul></div> 
     </div>
-    <div class="comments">
+    <div class="comments"><a name="feedback"></a>
        <div class="header">ОТЗЫВЫ</div>
        <img class="underline" src="img\underline.png" alt="Упс">
         <img class="fotka" src="img\fotka.png" alt="Упс">
@@ -106,7 +106,7 @@
         </ul>
         </div>
     </div>
-    <div class="contacts">
+    <div class="contacts"><a name="contacts"></a>
         <div class="header-contacts">МОИ КОНТАКТЫ</div>
         <img class="underline" src="img\underline.png" alt="Упс">
         <div class="some-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit duis se</div>
@@ -118,7 +118,7 @@
         <div class="send-message">ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</div>
         <div class="form-msg"><form action="#">
             <input type="text" name = "text_name" placeholder = "Имя">
-            <input type="text" name = "text_name" placeholder = "E-mail">
+            <input type="e-mail" name = "text_e-mail" placeholder = "E-mail">
            <p><textarea name = "name1" cols = "46" rows = "5" placeholder = "Сообщение"></textarea></p>
            <input class="button" type="submit" value = "Отправить"> 
         </form></div>
