Добавлен калькулятор на JS

--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,9 @@
     </header>
     
 <main>
-   <section class="main">    
-    <div class="container h-100"><div class="row h-100 align-items-center"><div class="col-lg-6">
-       <div class="title_container">
+   <section class="main h-100">    
+    <div class="container h-100"><div class="row align-items-center h-100 "><div class="col-lg-6 mt-5 pt-5">
+       <div class="title_container mt-5">
         <h1>Привет<br>Я Илья Кин</h1>
         <h4>Фулл стек веб-разработчик</h4>
         <input type="button" value = "Обо мне">
@@ -74,7 +74,7 @@
     <a name="services"></a>
        <div class="header">ЧТО Я УМЕЮ</div>
         <img class="underline" src="img\underline.png" alt="Упс"></div></div>
-     <div class="row"><div class="col"> <div class="skills-ul"><ul>
+     <div class="row"><div class="col-xxl-12"> <div class="skills-ul"><ul>
             <li><img src="img\note.jpg" alt="Упс"><h2>Веб-дизайн</h2><p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempu</p></li>
             <li><img src="img\sign.jpg" alt="Упс"><h2>Разработка</h2><p>Lorem ipsum dolor sit amet placerat facilisis mi in tempus elei</p></li>
             <li><img src="img\racket.jpg" alt="Упс"><h2>CEO-оптимизация</h2><p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempu</p></li>
@@ -171,6 +171,7 @@
     </div>
     </section>
     
-<script src="js/bootstrap.bundle.min.js"></script>    
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/my_script.js"></script>    
 </body>
 </html>
