--- a/src/index.html
+++ b/src/index.html
@@ -132,18 +132,20 @@
     </div></div>
    
     </section>
+    
     <section class="statistics">
     <div class="container">
-        <div class="header">НЕМНОГО СТАТИСТИКИ</div>
-        <img class="underline" src="img\underline.png" alt="Упс">
-        <div class="stat-ul"><ul>
-            <li><img src="img\smile.png" alt="Упс"><h2>120</h2><p>СЧАСТЛИВЫХ КЛИЕНТОВ</p></li>
-            <li><img src="img\scobki.png" alt="Упс"><h2>4,600</h2><p>ЧАСОВ РАБОТЫ</p></li>
-            <li><img src="img\ok.png" alt="Упс"><h2>340</h2><p>ПРОЕКТОВ ЗАВЕРШЕНО</p></li>
-            <li><img src="img\kubok.png" alt="Упс"><h2>23</h2><p>НАГРАД ПОЛУЧЕНО</p></li>
-        </ul></div> 
+        <div class="row"><div class="col"><div class="header">НЕМНОГО СТАТИСТИКИ</div>
+        <img class="underline" src="img\underline.png" alt="Упс"></div></div>
+        <div class="row justify-content-around"><ul>
+            <div class="col"><li><img src="img\smile.png" alt="Упс"><h2>120</h2><p>СЧАСТЛИВЫХ КЛИЕНТОВ</p></li></div>
+            <div class="col"><li><img src="img\scobki.png" alt="Упс"><h2>4,600</h2><p>ЧАСОВ РАБОТЫ</p></li></div>
+            <div class="col"><li><img src="img\ok.png" alt="Упс"><h2>340</h2><p>ПРОЕКТОВ ЗАВЕРШЕНО</p></li></div>
+            <div class="col"><li><img src="img\kubok.png" alt="Упс"><h2>23</h2><p>НАГРАД ПОЛУЧЕНО</p></li></div>
+        </ul> </div>  
     </div>
     </section>
+    
     <section class="comments" id="feedback">
     <div class="container">
        <div class="header">ОТЗЫВЫ</div>
